parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     statement_list -> statement
Rule 3     statement_list -> statement_list statement
Rule 4     statement -> declaration
Rule 5     statement -> assignment
Rule 6     statement -> function_declaration
Rule 7     statement -> function_call_statement
Rule 8     statement -> conditional
Rule 9     statement -> loop
Rule 10    statement -> return_statement
Rule 11    statement -> print_statement
Rule 12    statement -> read_statement
Rule 13    statement -> empty
Rule 14    empty -> <empty>
Rule 15    function_call_statement -> function_call SEMICOLON
Rule 16    declaration -> type IDENTIFIER SEMICOLON
Rule 17    declaration -> type IDENTIFIER EQUALS expression SEMICOLON
Rule 18    type -> INT_TYPE
Rule 19    type -> FLOAT_TYPE
Rule 20    type -> STRING_TYPE
Rule 21    type -> BOOL_TYPE
Rule 22    assignment -> IDENTIFIER EQUALS expression SEMICOLON
Rule 23    expression -> logical_expr
Rule 24    expression -> function_call
Rule 25    logical_expr -> comparison_expr
Rule 26    logical_expr -> logical_expr AND comparison_expr
Rule 27    logical_expr -> logical_expr OR comparison_expr
Rule 28    logical_expr -> NOT comparison_expr
Rule 29    comparison_expr -> arithmetic_expr
Rule 30    comparison_expr -> arithmetic_expr comparison_op arithmetic_expr
Rule 31    comparison_op -> LESS_THAN
Rule 32    comparison_op -> GREATER_THAN
Rule 33    comparison_op -> LESS_EQUAL
Rule 34    comparison_op -> GREATER_EQUAL
Rule 35    comparison_op -> EQ
Rule 36    comparison_op -> NOT_EQUAL
Rule 37    arithmetic_expr -> term
Rule 38    arithmetic_expr -> arithmetic_expr PLUS term
Rule 39    arithmetic_expr -> arithmetic_expr MINUS term
Rule 40    arithmetic_expr -> arithmetic_expr MOD term
Rule 41    term -> factor
Rule 42    term -> term MULTIPLY factor
Rule 43    term -> term DIVIDE factor
Rule 44    factor -> INTEGER
Rule 45    factor -> FLOAT
Rule 46    factor -> STRING
Rule 47    factor -> TRUE
Rule 48    factor -> FALSE
Rule 49    factor -> IDENTIFIER
Rule 50    factor -> LPAREN expression RPAREN
Rule 51    function_declaration -> FUNCTION IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
Rule 52    parameter_list -> <empty>
Rule 53    parameter_list -> type IDENTIFIER
Rule 54    parameter_list -> parameter_list COMMA type IDENTIFIER
Rule 55    function_call -> IDENTIFIER LPAREN argument_list RPAREN
Rule 56    argument_list -> <empty>
Rule 57    argument_list -> expression
Rule 58    argument_list -> argument_list COMMA expression
Rule 59    conditional -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 60    conditional -> IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
Rule 61    loop -> WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
Rule 62    loop -> FOR LPAREN declaration expression SEMICOLON for_increment RPAREN LBRACE statement_list RBRACE
Rule 63    for_increment -> IDENTIFIER EQUALS expression
Rule 64    for_increment -> expression
Rule 65    return_statement -> RETURN expression SEMICOLON
Rule 66    print_statement -> PRINT LPAREN expression RPAREN SEMICOLON
Rule 67    read_statement -> READ LPAREN RPAREN SEMICOLON

Terminals, with rules where they appear

AND                  : 26
BOOL_TYPE            : 21
COMMA                : 54 58
DIVIDE               : 43
ELSE                 : 60
EQ                   : 35
EQUALS               : 17 22 63
FALSE                : 48
FLOAT                : 45
FLOAT_TYPE           : 19
FOR                  : 62
FUNCTION             : 51
GREATER_EQUAL        : 34
GREATER_THAN         : 32
IDENTIFIER           : 16 17 22 49 51 53 54 55 63
IF                   : 59 60
INTEGER              : 44
INT_TYPE             : 18
LBRACE               : 51 59 60 60 61 62
LESS_EQUAL           : 33
LESS_THAN            : 31
LPAREN               : 50 51 55 59 60 61 62 66 67
MINUS                : 39
MOD                  : 40
MULTIPLY             : 42
NOT                  : 28
NOT_EQUAL            : 36
OR                   : 27
PLUS                 : 38
PRINT                : 66
RBRACE               : 51 59 60 60 61 62
READ                 : 67
RETURN               : 65
RPAREN               : 50 51 55 59 60 61 62 66 67
SEMICOLON            : 15 16 17 22 62 65 66 67
STRING               : 46
STRING_TYPE          : 20
TRUE                 : 47
WHILE                : 61
error                : 

Nonterminals, with rules where they appear

argument_list        : 55 58
arithmetic_expr      : 29 30 30 38 39 40
assignment           : 5
comparison_expr      : 25 26 27 28
comparison_op        : 30
conditional          : 8
declaration          : 4 62
empty                : 13
expression           : 17 22 50 57 58 59 60 61 62 63 64 65 66
factor               : 41 42 43
for_increment        : 62
function_call        : 15 24
function_call_statement : 7
function_declaration : 6
logical_expr         : 23 26 27
loop                 : 9
parameter_list       : 51 54
print_statement      : 11
program              : 0
read_statement       : 12
return_statement     : 10
statement            : 2 3
statement_list       : 1 3 51 59 60 60 61 62
term                 : 37 38 39 40 42 43
type                 : 16 17 53 54

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) statement_list -> . statement
    (3) statement_list -> . statement_list statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . function_declaration
    (7) statement -> . function_call_statement
    (8) statement -> . conditional
    (9) statement -> . loop
    (10) statement -> . return_statement
    (11) statement -> . print_statement
    (12) statement -> . read_statement
    (13) statement -> . empty
    (16) declaration -> . type IDENTIFIER SEMICOLON
    (17) declaration -> . type IDENTIFIER EQUALS expression SEMICOLON
    (22) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (51) function_declaration -> . FUNCTION IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (15) function_call_statement -> . function_call SEMICOLON
    (59) conditional -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (60) conditional -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (61) loop -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (62) loop -> . FOR LPAREN declaration expression SEMICOLON for_increment RPAREN LBRACE statement_list RBRACE
    (65) return_statement -> . RETURN expression SEMICOLON
    (66) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (67) read_statement -> . READ LPAREN RPAREN SEMICOLON
    (14) empty -> .
    (18) type -> . INT_TYPE
    (19) type -> . FLOAT_TYPE
    (20) type -> . STRING_TYPE
    (21) type -> . BOOL_TYPE
    (55) function_call -> . IDENTIFIER LPAREN argument_list RPAREN

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for FLOAT_TYPE resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for BOOL_TYPE resolved as shift
    IDENTIFIER      shift and go to state 15
    FUNCTION        shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    READ            shift and go to state 23
    $end            reduce using rule 14 (empty -> .)
    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27

  ! IDENTIFIER      [ reduce using rule 14 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 14 (empty -> .) ]
  ! IF              [ reduce using rule 14 (empty -> .) ]
  ! WHILE           [ reduce using rule 14 (empty -> .) ]
  ! FOR             [ reduce using rule 14 (empty -> .) ]
  ! RETURN          [ reduce using rule 14 (empty -> .) ]
  ! PRINT           [ reduce using rule 14 (empty -> .) ]
  ! READ            [ reduce using rule 14 (empty -> .) ]
  ! INT_TYPE        [ reduce using rule 14 (empty -> .) ]
  ! FLOAT_TYPE      [ reduce using rule 14 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 14 (empty -> .) ]
  ! BOOL_TYPE       [ reduce using rule 14 (empty -> .) ]

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    statement                      shift and go to state 3
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    function_call_statement        shift and go to state 7
    conditional                    shift and go to state 8
    loop                           shift and go to state 9
    return_statement               shift and go to state 10
    print_statement                shift and go to state 11
    read_statement                 shift and go to state 12
    empty                          shift and go to state 13
    type                           shift and go to state 14
    function_call                  shift and go to state 17

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (3) statement_list -> statement_list . statement
    (4) statement -> . declaration
    (5) statement -> . assignment
    (6) statement -> . function_declaration
    (7) statement -> . function_call_statement
    (8) statement -> . conditional
    (9) statement -> . loop
    (10) statement -> . return_statement
    (11) statement -> . print_statement
    (12) statement -> . read_statement
    (13) statement -> . empty
    (16) declaration -> . type IDENTIFIER SEMICOLON
    (17) declaration -> . type IDENTIFIER EQUALS expression SEMICOLON
    (22) assignment -> . IDENTIFIER EQUALS expression SEMICOLON
    (51) function_declaration -> . FUNCTION IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE
    (15) function_call_statement -> . function_call SEMICOLON
    (59) conditional -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE
    (60) conditional -> . IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
    (61) loop -> . WHILE LPAREN expression RPAREN LBRACE statement_list RBRACE
    (62) loop -> . FOR LPAREN declaration expression SEMICOLON for_increment RPAREN LBRACE statement_list RBRACE
    (65) return_statement -> . RETURN expression SEMICOLON
    (66) print_statement -> . PRINT LPAREN expression RPAREN SEMICOLON
    (67) read_statement -> . READ LPAREN RPAREN SEMICOLON
    (14) empty -> .
    (18) type -> . INT_TYPE
    (19) type -> . FLOAT_TYPE
    (20) type -> . STRING_TYPE
    (21) type -> . BOOL_TYPE
    (55) function_call -> . IDENTIFIER LPAREN argument_list RPAREN

  ! shift/reduce conflict for IDENTIFIER resolved as shift
  ! shift/reduce conflict for FUNCTION resolved as shift
  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
  ! shift/reduce conflict for RETURN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
  ! shift/reduce conflict for READ resolved as shift
  ! reduce/reduce conflict for $end resolved using rule 1 (program -> statement_list .)
  ! shift/reduce conflict for INT_TYPE resolved as shift
  ! shift/reduce conflict for FLOAT_TYPE resolved as shift
  ! shift/reduce conflict for STRING_TYPE resolved as shift
  ! shift/reduce conflict for BOOL_TYPE resolved as shift
    $end            reduce using rule 1 (program -> statement_list .)
    IDENTIFIER      shift and go to state 15
    FUNCTION        shift and go to state 16
    IF              shift and go to state 18
    WHILE           shift and go to state 19
    FOR             shift and go to state 20
    RETURN          shift and go to state 21
    PRINT           shift and go to state 22
    READ            shift and go to state 23
    INT_TYPE        shift and go to state 24
    FLOAT_TYPE      shift and go to state 25
    STRING_TYPE     shift and go to state 26
    BOOL_TYPE       shift and go to state 27

  ! IDENTIFIER      [ reduce using rule 14 (empty -> .) ]
  ! FUNCTION        [ reduce using rule 14 (empty -> .) ]
  ! IF              [ reduce using rule 14 (empty -> .) ]
  ! WHILE           [ reduce using rule 14 (empty -> .) ]
  ! FOR             [ reduce using rule 14 (empty -> .) ]
  ! RETURN          [ reduce using rule 14 (empty -> .) ]
  ! PRINT           [ reduce using rule 14 (empty -> .) ]
  ! READ            [ reduce using rule 14 (empty -> .) ]
  ! INT_TYPE        [ reduce using rule 14 (empty -> .) ]
  ! FLOAT_TYPE      [ reduce using rule 14 (empty -> .) ]
  ! STRING_TYPE     [ reduce using rule 14 (empty -> .) ]
  ! BOOL_TYPE       [ reduce using rule 14 (empty -> .) ]
  ! $end            [ reduce using rule 14 (empty -> .) ]

    statement                      shift and go to state 28
    declaration                    shift and go to state 4
    assignment                     shift and go to state 5
    function_declaration           shift and go to state 6
    function_call_statement        shift and go to state 7
    conditional                    shift and go to state 8
    loop                           shift and go to state 9
    return_statement               shift and go to state 10
    print_statement                shift and go to state 11
    read_statement                 shift and go to state 12
    empty                          shift and go to state 13
    type                           shift and go to state 14
    function_call                  shift and go to state 17

state 3

    (2) statement_list -> statement .

    IDENTIFIER      reduce using rule 2 (statement_list -> statement .)
    FUNCTION        reduce using rule 2 (statement_list -> statement .)
    IF              reduce using rule 2 (statement_list -> statement .)
    WHILE           reduce using rule 2 (statement_list -> statement .)
    FOR             reduce using rule 2 (statement_list -> statement .)
    RETURN          reduce using rule 2 (statement_list -> statement .)
    PRINT           reduce using rule 2 (statement_list -> statement .)
    READ            reduce using rule 2 (statement_list -> statement .)
    INT_TYPE        reduce using rule 2 (statement_list -> statement .)
    FLOAT_TYPE      reduce using rule 2 (statement_list -> statement .)
    STRING_TYPE     reduce using rule 2 (statement_list -> statement .)
    BOOL_TYPE       reduce using rule 2 (statement_list -> statement .)
    $end            reduce using rule 2 (statement_list -> statement .)
    RBRACE          reduce using rule 2 (statement_list -> statement .)


state 4

    (4) statement -> declaration .

    IDENTIFIER      reduce using rule 4 (statement -> declaration .)
    FUNCTION        reduce using rule 4 (statement -> declaration .)
    IF              reduce using rule 4 (statement -> declaration .)
    WHILE           reduce using rule 4 (statement -> declaration .)
    FOR             reduce using rule 4 (statement -> declaration .)
    RETURN          reduce using rule 4 (statement -> declaration .)
    PRINT           reduce using rule 4 (statement -> declaration .)
    READ            reduce using rule 4 (statement -> declaration .)
    INT_TYPE        reduce using rule 4 (statement -> declaration .)
    FLOAT_TYPE      reduce using rule 4 (statement -> declaration .)
    STRING_TYPE     reduce using rule 4 (statement -> declaration .)
    BOOL_TYPE       reduce using rule 4 (statement -> declaration .)
    $end            reduce using rule 4 (statement -> declaration .)
    RBRACE          reduce using rule 4 (statement -> declaration .)


state 5

    (5) statement -> assignment .

    IDENTIFIER      reduce using rule 5 (statement -> assignment .)
    FUNCTION        reduce using rule 5 (statement -> assignment .)
    IF              reduce using rule 5 (statement -> assignment .)
    WHILE           reduce using rule 5 (statement -> assignment .)
    FOR             reduce using rule 5 (statement -> assignment .)
    RETURN          reduce using rule 5 (statement -> assignment .)
    PRINT           reduce using rule 5 (statement -> assignment .)
    READ            reduce using rule 5 (statement -> assignment .)
    INT_TYPE        reduce using rule 5 (statement -> assignment .)
    FLOAT_TYPE      reduce using rule 5 (statement -> assignment .)
    STRING_TYPE     reduce using rule 5 (statement -> assignment .)
    BOOL_TYPE       reduce using rule 5 (statement -> assignment .)
    $end            reduce using rule 5 (statement -> assignment .)
    RBRACE          reduce using rule 5 (statement -> assignment .)


state 6

    (6) statement -> function_declaration .

    IDENTIFIER      reduce using rule 6 (statement -> function_declaration .)
    FUNCTION        reduce using rule 6 (statement -> function_declaration .)
    IF              reduce using rule 6 (statement -> function_declaration .)
    WHILE           reduce using rule 6 (statement -> function_declaration .)
    FOR             reduce using rule 6 (statement -> function_declaration .)
    RETURN          reduce using rule 6 (statement -> function_declaration .)
    PRINT           reduce using rule 6 (statement -> function_declaration .)
    READ            reduce using rule 6 (statement -> function_declaration .)
    INT_TYPE        reduce using rule 6 (statement -> function_declaration .)
    FLOAT_TYPE      reduce using rule 6 (statement -> function_declaration .)
    STRING_TYPE     reduce using rule 6 (statement -> function_declaration .)
    BOOL_TYPE       reduce using rule 6 (statement -> function_declaration .)
    $end            reduce using rule 6 (statement -> function_declaration .)
    RBRACE          reduce using rule 6 (statement -> function_declaration .)


state 7

    (7) statement -> function_call_statement .

    IDENTIFIER      reduce using rule 7 (statement -> function_call_statement .)
    FUNCTION        reduce using rule 7 (statement -> function_call_statement .)
    IF              reduce using rule 7 (statement -> function_call_statement .)
    WHILE           reduce using rule 7 (statement -> function_call_statement .)
    FOR             reduce using rule 7 (statement -> function_call_statement .)
    RETURN          reduce using rule 7 (statement -> function_call_statement .)
    PRINT           reduce using rule 7 (statement -> function_call_statement .)
    READ            reduce using rule 7 (statement -> function_call_statement .)
    INT_TYPE        reduce using rule 7 (statement -> function_call_statement .)
    FLOAT_TYPE      reduce using rule 7 (statement -> function_call_statement .)
    STRING_TYPE     reduce using rule 7 (statement -> function_call_statement .)
    BOOL_TYPE       reduce using rule 7 (statement -> function_call_statement .)
    $end            reduce using rule 7 (statement -> function_call_statement .)
    RBRACE          reduce using rule 7 (statement -> function_call_statement .)


state 8

    (8) statement -> conditional .

    IDENTIFIER      reduce using rule 8 (statement -> conditional .)
    FUNCTION        reduce using rule 8 (statement -> conditional .)
    IF              reduce using rule 8 (statement -> conditional .)
    WHILE           reduce using rule 8 (statement -> conditional .)
    FOR             reduce using rule 8 (statement -> conditional .)
    RETURN          reduce using rule 8 (statement -> conditional .)
    PRINT           reduce using rule 8 (statement -> conditional .)
    READ            reduce using rule 8 (statement -> conditional .)
    INT_TYPE        reduce using rule 8 (statement -> conditional .)
    FLOAT_TYPE      reduce using rule 8 (statement -> conditional .)
    STRING_TYPE     reduce using rule 8 (statement -> conditional .)
    BOOL_TYPE       reduce using rule 8 (statement -> conditional .)
    $end            reduce using rule 8 (statement -> conditional .)
    RBRACE          reduce using rule 8 (statement -> conditional .)


state 9

    (9) statement -> loop .

    IDENTIFIER      reduce using rule 9 (statement -> loop .)
    FUNCTION        reduce using rule 9 (statement -> loop .)
    IF              reduce using rule 9 (statement -> loop .)
    WHILE           reduce using rule 9 (statement -> loop .)
    FOR             reduce using rule 9 (statement -> loop .)
    RETURN          reduce using rule 9 (statement -> loop .)
    PRINT           reduce using rule 9 (statement -> loop .)
    READ            reduce using rule 9 (statement -> loop .)
    INT_TYPE        reduce using rule 9 (statement -> loop .)
    FLOAT_TYPE      reduce using rule 9 (statement -> loop .)
    STRING_TYPE     reduce using rule 9 (statement -> loop .)
    BOOL_TYPE       reduce using rule 9 (statement -> loop .)
    $end            reduce using rule 9 (statement -> loop .)
    RBRACE          reduce using rule 9 (statement -> loop .)


state 10

    (10) statement -> return_statement .

    IDENTIFIER      reduce using rule 10 (statement -> return_statement .)
    FUNCTION        reduce using rule 10 (statement -> return_statement .)
    IF              reduce using rule 10 (statement -> return_statement .)
    WHILE           reduce using rule 10 (statement -> return_statement .)
    FOR             reduce using rule 10 (statement -> return_statement .)
    RETURN          reduce using rule 10 (statement -> return_statement .)
    PRINT           reduce using rule 10 (statement -> return_statement .)
    READ            reduce using rule 10 (statement -> return_statement .)
    INT_TYPE        reduce using rule 10 (statement -> return_statement .)
    FLOAT_TYPE      reduce using rule 10 (statement -> return_statement .)
    STRING_TYPE     reduce using rule 10 (statement -> return_statement .)
    BOOL_TYPE       reduce using rule 10 (statement -> return_statement .)
    $end            reduce using rule 10 (statement -> return_statement .)
    RBRACE          reduce using rule 10 (statement -> return_statement .)


state 11

    (11) statement -> print_statement .

    IDENTIFIER      reduce using rule 11 (statement -> print_statement .)
    FUNCTION        reduce using rule 11 (statement -> print_statement .)
    IF              reduce using rule 11 (statement -> print_statement .)
    WHILE           reduce using rule 11 (statement -> print_statement .)
    FOR             reduce using rule 11 (statement -> print_statement .)
    RETURN          reduce using rule 11 (statement -> print_statement .)
    PRINT           reduce using rule 11 (statement -> print_statement .)
    READ            reduce using rule 11 (statement -> print_statement .)
    INT_TYPE        reduce using rule 11 (statement -> print_statement .)
    FLOAT_TYPE      reduce using rule 11 (statement -> print_statement .)
    STRING_TYPE     reduce using rule 11 (statement -> print_statement .)
    BOOL_TYPE       reduce using rule 11 (statement -> print_statement .)
    $end            reduce using rule 11 (statement -> print_statement .)
    RBRACE          reduce using rule 11 (statement -> print_statement .)


state 12

    (12) statement -> read_statement .

    IDENTIFIER      reduce using rule 12 (statement -> read_statement .)
    FUNCTION        reduce using rule 12 (statement -> read_statement .)
    IF              reduce using rule 12 (statement -> read_statement .)
    WHILE           reduce using rule 12 (statement -> read_statement .)
    FOR             reduce using rule 12 (statement -> read_statement .)
    RETURN          reduce using rule 12 (statement -> read_statement .)
    PRINT           reduce using rule 12 (statement -> read_statement .)
    READ            reduce using rule 12 (statement -> read_statement .)
    INT_TYPE        reduce using rule 12 (statement -> read_statement .)
    FLOAT_TYPE      reduce using rule 12 (statement -> read_statement .)
    STRING_TYPE     reduce using rule 12 (statement -> read_statement .)
    BOOL_TYPE       reduce using rule 12 (statement -> read_statement .)
    $end            reduce using rule 12 (statement -> read_statement .)
    RBRACE          reduce using rule 12 (statement -> read_statement .)


state 13

    (13) statement -> empty .

    IDENTIFIER      reduce using rule 13 (statement -> empty .)
    FUNCTION        reduce using rule 13 (statement -> empty .)
    IF              reduce using rule 13 (statement -> empty .)
    WHILE           reduce using rule 13 (statement -> empty .)
    FOR             reduce using rule 13 (statement -> empty .)
    RETURN          reduce using rule 13 (statement -> empty .)
    PRINT           reduce using rule 13 (statement -> empty .)
    READ            reduce using rule 13 (statement -> empty .)
    INT_TYPE        reduce using rule 13 (statement -> empty .)
    FLOAT_TYPE      reduce using rule 13 (statement -> empty .)
    STRING_TYPE     reduce using rule 13 (statement -> empty .)
    BOOL_TYPE       reduce using rule 13 (statement -> empty .)
    $end            reduce using rule 13 (statement -> empty .)
    RBRACE          reduce using rule 13 (statement -> empty .)


state 14

    (16) declaration -> type . IDENTIFIER SEMICOLON
    (17) declaration -> type . IDENTIFIER EQUALS expression SEMICOLON

    IDENTIFIER      shift and go to state 29


state 15

    (22) assignment -> IDENTIFIER . EQUALS expression SEMICOLON
    (55) function_call -> IDENTIFIER . LPAREN argument_list RPAREN

    EQUALS          shift and go to state 30
    LPAREN          shift and go to state 31


state 16

    (51) function_declaration -> FUNCTION . IDENTIFIER LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    IDENTIFIER      shift and go to state 32


state 17

    (15) function_call_statement -> function_call . SEMICOLON

    SEMICOLON       shift and go to state 33


state 18

    (59) conditional -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
    (60) conditional -> IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN          shift and go to state 34


state 19

    (61) loop -> WHILE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 35


state 20

    (62) loop -> FOR . LPAREN declaration expression SEMICOLON for_increment RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 36


state 21

    (65) return_statement -> RETURN . expression SEMICOLON
    (23) expression -> . logical_expr
    (24) expression -> . function_call
    (25) logical_expr -> . comparison_expr
    (26) logical_expr -> . logical_expr AND comparison_expr
    (27) logical_expr -> . logical_expr OR comparison_expr
    (28) logical_expr -> . NOT comparison_expr
    (55) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (29) comparison_expr -> . arithmetic_expr
    (30) comparison_expr -> . arithmetic_expr comparison_op arithmetic_expr
    (37) arithmetic_expr -> . term
    (38) arithmetic_expr -> . arithmetic_expr PLUS term
    (39) arithmetic_expr -> . arithmetic_expr MINUS term
    (40) arithmetic_expr -> . arithmetic_expr MOD term
    (41) term -> . factor
    (42) term -> . term MULTIPLY factor
    (43) term -> . term DIVIDE factor
    (44) factor -> . INTEGER
    (45) factor -> . FLOAT
    (46) factor -> . STRING
    (47) factor -> . TRUE
    (48) factor -> . FALSE
    (49) factor -> . IDENTIFIER
    (50) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 41
    IDENTIFIER      shift and go to state 42
    INTEGER         shift and go to state 47
    FLOAT           shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 43

    expression                     shift and go to state 37
    logical_expr                   shift and go to state 38
    function_call                  shift and go to state 39
    comparison_expr                shift and go to state 40
    arithmetic_expr                shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 46

state 22

    (66) print_statement -> PRINT . LPAREN expression RPAREN SEMICOLON

    LPAREN          shift and go to state 52


state 23

    (67) read_statement -> READ . LPAREN RPAREN SEMICOLON

    LPAREN          shift and go to state 53


state 24

    (18) type -> INT_TYPE .

    IDENTIFIER      reduce using rule 18 (type -> INT_TYPE .)


state 25

    (19) type -> FLOAT_TYPE .

    IDENTIFIER      reduce using rule 19 (type -> FLOAT_TYPE .)


state 26

    (20) type -> STRING_TYPE .

    IDENTIFIER      reduce using rule 20 (type -> STRING_TYPE .)


state 27

    (21) type -> BOOL_TYPE .

    IDENTIFIER      reduce using rule 21 (type -> BOOL_TYPE .)


state 28

    (3) statement_list -> statement_list statement .

    IDENTIFIER      reduce using rule 3 (statement_list -> statement_list statement .)
    FUNCTION        reduce using rule 3 (statement_list -> statement_list statement .)
    IF              reduce using rule 3 (statement_list -> statement_list statement .)
    WHILE           reduce using rule 3 (statement_list -> statement_list statement .)
    FOR             reduce using rule 3 (statement_list -> statement_list statement .)
    RETURN          reduce using rule 3 (statement_list -> statement_list statement .)
    PRINT           reduce using rule 3 (statement_list -> statement_list statement .)
    READ            reduce using rule 3 (statement_list -> statement_list statement .)
    INT_TYPE        reduce using rule 3 (statement_list -> statement_list statement .)
    FLOAT_TYPE      reduce using rule 3 (statement_list -> statement_list statement .)
    STRING_TYPE     reduce using rule 3 (statement_list -> statement_list statement .)
    BOOL_TYPE       reduce using rule 3 (statement_list -> statement_list statement .)
    $end            reduce using rule 3 (statement_list -> statement_list statement .)
    RBRACE          reduce using rule 3 (statement_list -> statement_list statement .)


state 29

    (16) declaration -> type IDENTIFIER . SEMICOLON
    (17) declaration -> type IDENTIFIER . EQUALS expression SEMICOLON

    SEMICOLON       shift and go to state 54
    EQUALS          shift and go to state 55


state 30

    (22) assignment -> IDENTIFIER EQUALS . expression SEMICOLON
    (23) expression -> . logical_expr
    (24) expression -> . function_call
    (25) logical_expr -> . comparison_expr
    (26) logical_expr -> . logical_expr AND comparison_expr
    (27) logical_expr -> . logical_expr OR comparison_expr
    (28) logical_expr -> . NOT comparison_expr
    (55) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (29) comparison_expr -> . arithmetic_expr
    (30) comparison_expr -> . arithmetic_expr comparison_op arithmetic_expr
    (37) arithmetic_expr -> . term
    (38) arithmetic_expr -> . arithmetic_expr PLUS term
    (39) arithmetic_expr -> . arithmetic_expr MINUS term
    (40) arithmetic_expr -> . arithmetic_expr MOD term
    (41) term -> . factor
    (42) term -> . term MULTIPLY factor
    (43) term -> . term DIVIDE factor
    (44) factor -> . INTEGER
    (45) factor -> . FLOAT
    (46) factor -> . STRING
    (47) factor -> . TRUE
    (48) factor -> . FALSE
    (49) factor -> . IDENTIFIER
    (50) factor -> . LPAREN expression RPAREN

    NOT             shift and go to state 41
    IDENTIFIER      shift and go to state 42
    INTEGER         shift and go to state 47
    FLOAT           shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 43

    expression                     shift and go to state 56
    logical_expr                   shift and go to state 38
    function_call                  shift and go to state 39
    comparison_expr                shift and go to state 40
    arithmetic_expr                shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 46

state 31

    (55) function_call -> IDENTIFIER LPAREN . argument_list RPAREN
    (56) argument_list -> .
    (57) argument_list -> . expression
    (58) argument_list -> . argument_list COMMA expression
    (23) expression -> . logical_expr
    (24) expression -> . function_call
    (25) logical_expr -> . comparison_expr
    (26) logical_expr -> . logical_expr AND comparison_expr
    (27) logical_expr -> . logical_expr OR comparison_expr
    (28) logical_expr -> . NOT comparison_expr
    (55) function_call -> . IDENTIFIER LPAREN argument_list RPAREN
    (29) comparison_expr -> . arithmetic_expr
    (30) comparison_expr -> . arithmetic_expr comparison_op arithmetic_expr
    (37) arithmetic_expr -> . term
    (38) arithmetic_expr -> . arithmetic_expr PLUS term
    (39) arithmetic_expr -> . arithmetic_expr MINUS term
    (40) arithmetic_expr -> . arithmetic_expr MOD term
    (41) term -> . factor
    (42) term -> . term MULTIPLY factor
    (43) term -> . term DIVIDE factor
    (44) factor -> . INTEGER
    (45) factor -> . FLOAT
    (46) factor -> . STRING
    (47) factor -> . TRUE
    (48) factor -> . FALSE
    (49) factor -> . IDENTIFIER
    (50) factor -> . LPAREN expression RPAREN

    RPAREN          reduce using rule 56 (argument_list -> .)
    COMMA           reduce using rule 56 (argument_list -> .)
    NOT             shift and go to state 41
    IDENTIFIER      shift and go to state 42
    INTEGER         shift and go to state 47
    FLOAT           shift and go to state 48
    STRING          shift and go to state 49
    TRUE            shift and go to state 50
    FALSE           shift and go to state 51
    LPAREN          shift and go to state 43

    argument_list                  shift and go to state 57
    expression                     shift and go to state 58
    logical_expr                   shift and go to state 38
    function_call                  shift and go to state 39
    comparison_expr                shift and go to state 40
    arithmetic_expr                shift and go to state 44
    term                           shift and go to state 45
    factor                         shift and go to state 46

state 32

    (51) function_declaration -> FUNCTION IDENTIFIER . LPAREN parameter_list RPAREN LBRACE statement_list RBRACE

    LPAREN          shift and go to state 59


state 33

    (15) function_call_statement -> function_call SEMICOLON .

